--- a/style.css
+++ b/style.css
@@ -42,13 +42,14 @@ header {
 }
 
 @media only screen and (max-width: 600px) {
-    body {
+    html {
         font-size: 12px;
     }
 }
 
 #welcome-heading {
     padding: 3rem 0px;
+    width: 400px;
 }
 
 h1 {
@@ -56,9 +57,6 @@ h1 {
     font-size: 2rem;
 }
 
-#welcome-heading p {
-    width: 70%;
-}
 
 button {
     border: 1px solid #e1b411;
@@ -71,17 +69,35 @@ button {
     display: inline-flex;
 }
 
-#enjoy {
+#enjoy, #booking {
     width: 50%;
-    margin: 1rem;
+    padding: 1rem;
 }
 
 #booking {
-    width: 50%;
-    padding: 1rem;
     background-color: lightgray;
     display: inline-flex;
     justify-content: space-around;
+}
+
+.room {
+    background-color: #e1b411;
+    color: #0c3d5e;
+    display: flex;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+.room figure {
+    display: flex;
+    width: 50%;
+    margin: 0px;
+}
+
+.room-description {
+    width: 50%;
+    align-items:
 }
 
 footer {
@@ -90,7 +106,7 @@ footer {
 }
 
 #top-footer {
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
 }
 
@@ -98,7 +114,7 @@ footer img {
     width: 100px;
 }
 
-figure, footer div {
+footer figure, div {
     padding: 1rem;
 }
 
@@ -110,4 +126,8 @@ footer li a {
     text-decoration: none;
     color: white;
     text-justify: left;
+}
+
+#copyright {
+    font-size: 0.75rem;
 }
