--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ button {
 #contact figure {
     padding: 0px;
     margin: 0px;
+    width: 60%
 }
 
 #contact img {
@@ -148,7 +149,7 @@ button {
 
 #contact textarea {
     width: 100%;
-    height: 7rem;
+    height: 4rem;
 }
 
 footer {
